--- a/submitbuttonview/build.gradle
+++ b/submitbuttonview/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.searchy2'
+version = '1.3'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -28,20 +31,9 @@ android {
 }
 
 dependencies {
+    repositories {
+        maven { url "https://maven.google.com" }
+    }
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:26.0.2'
 }
-
-publish {
-    userOrg = 'unstoppable'
-    groupId = 'com.unstoppable'
-    artifactId = 'submitbutton'
-    publishVersion = '1.1.2'
-    desc = 'It\'s a submit button with a fun animation for Android.'
-    website = 'https://github.com/Someonewow/SubmitButton'
-}
-
