--- a/submitbuttonview/build.gradle
+++ b/submitbuttonview/build.gradle
@@ -2,11 +2,10 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group='com.github.searchy2'
-version = '1.8'
+version = '1.8.1'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 15
@@ -29,5 +28,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha3'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
